# data_engineering_exercises

./: .gitignore  README.md
.github/workflows/: develop.yml  feature_branch.yml  main.yml  production.yml
Challenge 1/: brasil_loss_ratio_against.sql  brasil_win_ratio_against.sql  data_analysis.ipynb  docker-compose.yml  query_brasil_vs_who.sql  query_brasil_vs_who_wins.sql  requirements.txt
Challenge 2/: example.env  populate_pg4.py
Challenge 2/dms-insert-update-master/: insert.py  pyproject.toml  update.py
Exercise 1/: requirements.txt  solution1.py  solution2.ipynb  solution2.py
Exercise 2/: imoveis.ipynb  requirements.txt  solution.ipynb  solution.py  xadrez_verbal.ipynb  xadrez_verbal_feed.csv
Exercise 3/: Dockerfile  README.md  create-table-billboard  docker-compose.yml  main.ipynb  main.py  requirements.txt  test-queries  views
Exercise 3/web/: index.html
Exercise 4/: apis.py  ingestao.ipynb  ingestao.py  main.py  requirements.txt
Exercise 5/: Makefile  apis.py  example.env  ingestors.py  main.py  pyproject.toml  pytest.ini  requirements.txt  writer.py
Exercise 5/.github/workflows/: feature_branch.yml
Exercise 5/mercado_bitcoin/: apis.py  checkpoints.py  ingestors.py  lambda_function.py  logger.py  main.py  writer.py
Exercise 5/tests/: test_apis.py  test_ingestors.py  test_integration.py
Exercise 6/: docker-compose.yml  dockerfile
Exercise 6/cambio/: main.py
Exercise 7/: all_movies.py  main.py  nicholas_cage_movies.csv  requirements.txt
Exercise 8/: aws.py  env_example.env
Exercise 9/: example.env  firehose.py
