[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = ""
authors = ["Andre <andresionek91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
troposphere = "4.3.2"
requests = "^2.25.1"
ratelimit = "^2.2.1"
backoff = "^1.10.0"
boto3 = "^1.17.108"
pynamodb = "^5.1.0"
schedule = "^1.1.0"
mercado-bitcoin = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest-srcpaths = "^1.2.1"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "mercado_bitcoin",
]

[tool.poetry.dev-dependencies]
black = "^21.6b0"
zappa = "^0.50.0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.circleci
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.eggs
  | _build
  | buck-out
  | build
  | dist
  | src
  | venv
)/
'''